# Model-executor-runtime

./: .env  .gitignore  README.md  autoStart.sh  autoStop.sh  docker-compose.yaml
automations/: startDB.sh  startDRV.sh  stopDB.sh  testDRV.sh  testDriver.sh
database/: docker-compose.yaml
driver/: Cargo.toml  Dockerfile
driver/src/: main.rs
driver/src/dal/: mod.rs  postgres.rs  surreal.rs
driver/src/meal/: local.rs  mod.rs  ssh.rs
driver/src/repl/: mod.rs
migrations/: .env  Cargo.toml  Dockerfile
migrations/sql/: 01-DefineAvailableModels.sql  02-DefineModelAccess.sql  03-DefineModelWeights.sql  04-CreateAvailableModels.sql  04-CreateAvailableTestingModels.sql
migrations/src/: main.rs
migrations/src/sql/: 01-DefineAvailableModels.sql
start-stop-automation/: stopMER.sh  testDriver.sh
startStopScripts/: startMER.sh
test-model-examples/: README.md  environment.yml
test-model-examples/local/DialoGPT-large/: train.py
test-model-examples/local/DialoGPT-small/: inference.py
test-model-examples/ssh/: docker-compose.yaml
test-model-examples/ssh/DialoGPT-medium/: train.py
test-models/: README.md  environment.yml
test-models/local/DialoGPT-large/: save-pretrained-weights.py
test-models/local/DialoGPT-small/: inference.py
test-models/ssh/: docker-compose.yaml
test-models/ssh/DialoGPT-medium/: save-pretrained-weights.py
test-models/ssh/DialoGPT-small/: inference.py  save-pretrained-weights.py  train.py
