[package]
name = "mer-driver"
version = "0.1.0"
authors = ["Timotej979"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.20"
colored = "2.0"
shlex = "1.2.0"