[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.31"
log = "0.4.20"
logging = "0.1.0"
once_cell = "1.18.0"
serde = "1.0.188"
surrealdb = "1.0.0"
tokio = "1.33.0"
