[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
regex = "1.10.1"
serde = "1.0.188"
surrealdb = "1.0.0"
tokio = "1.33.0"
